Archive2/68/3a25eddc44d450/output
main.cpp: In function 'int main()':
main.cpp:40:30: error: unable to find string literal operator 'operator"" _b' with 'const char [2]', 'long unsigned int' arguments
     std::cout << bit_to_char("0"_b) << std::endl;
                              ^
main.cpp:41:30: error: unable to find string literal operator 'operator"" _b' with 'const char [2]', 'long unsigned int' arguments
     std::cout << bit_to_char("1"_b) << std::endl;
                              ^
main.cpp:42:30: error: unable to find string literal operator 'operator"" _b' with 'const char [2]', 'long unsigned int' arguments
     std::cout << bit_to_char("x"_b) << std::endl;
                              ^
main.cpp:43:30: error: unable to find string literal operator 'operator"" _b' with 'const char [2]', 'long unsigned int' arguments
     std::cout << bit_to_char("z"_b) << std::endl;
                              ^
